src/hw/accel/main.h

// Initialisation
struct futhark_context_config;
struct futhark_context_config *futhark_context_config_new(void);
void futhark_context_config_free(struct futhark_context_config *cfg);
struct futhark_context;
struct futhark_context *futhark_context_new(struct futhark_context_config *cfg);
void futhark_context_free(struct futhark_context *cfg);
void futhark_context_config_set_default_group_size(struct futhark_context_config *cfg, int size);
void futhark_context_config_set_default_num_groups(struct futhark_context_config *cfg, int size);
void futhark_context_config_set_default_tile_size(struct futhark_context_config *cfg, int size);
void futhark_context_config_set_device(struct futhark_context_config *cfg, const char *s);
// Arrays
struct futhark_f16_2d;
struct futhark_f16_2d *futhark_new_f16_2d(struct futhark_context *ctx, const uint16_t *data, int64_t dim0, int64_t dim1);
struct futhark_f16_2d *futhark_new_raw_f16_2d(struct futhark_context *ctx, CUdeviceptr data, int64_t dim0, int64_t dim1);
int futhark_free_f16_2d(struct futhark_context *ctx, struct futhark_f16_2d *arr);
int futhark_values_f16_2d(struct futhark_context *ctx, struct futhark_f16_2d *arr, uint16_t *data);
CUdeviceptr futhark_values_raw_f16_2d(struct futhark_context *ctx, struct futhark_f16_2d *arr);
const int64_t *futhark_shape_f16_2d(struct futhark_context *ctx, struct futhark_f16_2d *arr);
struct futhark_f16_3d;
struct futhark_f16_3d *futhark_new_f16_3d(struct futhark_context *ctx, const uint16_t *data, int64_t dim0, int64_t dim1, int64_t dim2);
struct futhark_f16_3d *futhark_new_raw_f16_3d(struct futhark_context *ctx, CUdeviceptr data, int64_t dim0, int64_t dim1, int64_t dim2);
int futhark_free_f16_3d(struct futhark_context *ctx, struct futhark_f16_3d *arr);
int futhark_values_f16_3d(struct futhark_context *ctx, struct futhark_f16_3d *arr, uint16_t *data);
CUdeviceptr futhark_values_raw_f16_3d(struct futhark_context *ctx, struct futhark_f16_3d *arr);
const int64_t *futhark_shape_f16_3d(struct futhark_context *ctx, struct futhark_f16_3d *arr);
struct futhark_f32_1d;
struct futhark_f32_1d *futhark_new_f32_1d(struct futhark_context *ctx, const float *data, int64_t dim0);
struct futhark_f32_1d *futhark_new_raw_f32_1d(struct futhark_context *ctx, CUdeviceptr data, int64_t dim0);
int futhark_free_f32_1d(struct futhark_context *ctx, struct futhark_f32_1d *arr);
int futhark_values_f32_1d(struct futhark_context *ctx, struct futhark_f32_1d *arr, float *data);
CUdeviceptr futhark_values_raw_f32_1d(struct futhark_context *ctx, struct futhark_f32_1d *arr);
const int64_t *futhark_shape_f32_1d(struct futhark_context *ctx, struct futhark_f32_1d *arr);
struct futhark_f32_2d;
struct futhark_f32_2d *futhark_new_f32_2d(struct futhark_context *ctx, const float *data, int64_t dim0, int64_t dim1);
struct futhark_f32_2d *futhark_new_raw_f32_2d(struct futhark_context *ctx, CUdeviceptr data, int64_t dim0, int64_t dim1);
int futhark_free_f32_2d(struct futhark_context *ctx, struct futhark_f32_2d *arr);
int futhark_values_f32_2d(struct futhark_context *ctx, struct futhark_f32_2d *arr, float *data);
CUdeviceptr futhark_values_raw_f32_2d(struct futhark_context *ctx, struct futhark_f32_2d *arr);
const int64_t *futhark_shape_f32_2d(struct futhark_context *ctx, struct futhark_f32_2d *arr);
struct futhark_f32_3d;
struct futhark_f32_3d *futhark_new_f32_3d(struct futhark_context *ctx, const float *data, int64_t dim0, int64_t dim1, int64_t dim2);
struct futhark_f32_3d *futhark_new_raw_f32_3d(struct futhark_context *ctx, CUdeviceptr data, int64_t dim0, int64_t dim1, int64_t dim2);
int futhark_free_f32_3d(struct futhark_context *ctx, struct futhark_f32_3d *arr);
int futhark_values_f32_3d(struct futhark_context *ctx, struct futhark_f32_3d *arr, float *data);
CUdeviceptr futhark_values_raw_f32_3d(struct futhark_context *ctx, struct futhark_f32_3d *arr);
const int64_t *futhark_shape_f32_3d(struct futhark_context *ctx, struct futhark_f32_3d *arr);
struct futhark_i64_1d;
struct futhark_i64_1d *futhark_new_i64_1d(struct futhark_context *ctx, const int64_t *data, int64_t dim0);
struct futhark_i64_1d *futhark_new_raw_i64_1d(struct futhark_context *ctx, CUdeviceptr data, int64_t dim0);
int futhark_free_i64_1d(struct futhark_context *ctx, struct futhark_i64_1d *arr);
int futhark_values_i64_1d(struct futhark_context *ctx, struct futhark_i64_1d *arr, int64_t *data);
CUdeviceptr futhark_values_raw_i64_1d(struct futhark_context *ctx, struct futhark_i64_1d *arr);
const int64_t *futhark_shape_i64_1d(struct futhark_context *ctx, struct futhark_i64_1d *arr);
struct futhark_u64_1d;
struct futhark_u64_1d *futhark_new_u64_1d(struct futhark_context *ctx, const uint64_t *data, int64_t dim0);
struct futhark_u64_1d *futhark_new_raw_u64_1d(struct futhark_context *ctx, CUdeviceptr data, int64_t dim0);
int futhark_free_u64_1d(struct futhark_context *ctx, struct futhark_u64_1d *arr);
int futhark_values_u64_1d(struct futhark_context *ctx, struct futhark_u64_1d *arr, uint64_t *data);
CUdeviceptr futhark_values_raw_u64_1d(struct futhark_context *ctx, struct futhark_u64_1d *arr);
const int64_t *futhark_shape_u64_1d(struct futhark_context *ctx, struct futhark_u64_1d *arr);
int futhark_entry_matmul(struct futhark_context *ctx, struct futhark_f32_2d **out0, const struct futhark_f32_2d *in0, const struct futhark_f32_2d *in1);
int futhark_entry_rsf_forward(struct futhark_context *ctx, struct futhark_f16_2d **out0, const struct futhark_f16_2d *in0, const struct futhark_f16_2d *in1, const struct futhark_f16_2d *in2, const uint16_t in3, const uint16_t in4);
// Miscellaneous
int futhark_context_sync(struct futhark_context *ctx);
void futhark_context_config_set_cache_file(struct futhark_context_config *cfg, const char *f);
char *futhark_context_get_error(struct futhark_context *ctx);
int futhark_context_clear_caches(struct futhark_context *ctx);