src/hw/accel/futhark_kernels.h

struct futhark_context;
struct futhark_f32_1d;
struct futhark_f32_2d;
struct futhark_f32_3d;
struct futhark_i64_1d;
struct futhark_i64_2d;
struct futhark_i64_2d *futhark_new_i64_2d(struct futhark_context *ctx, const int64_t *data, int64_t dim0, int64_t dim1);
int futhark_free_i64_2d(struct futhark_context *ctx, struct futhark_i64_2d *arr);
int futhark_values_i64_2d(struct futhark_context *ctx, struct futhark_i64_2d *arr, int64_t *data);
CUdeviceptr futhark_values_raw_i64_2d(struct futhark_context *ctx, struct futhark_i64_2d *arr);
struct futhark_u64_1d;
int futhark_entry_batch_matmul(struct futhark_context *ctx, struct futhark_f32_3d **out0, const struct futhark_f32_3d *in0, const struct futhark_f32_3d *in1);
int futhark_entry_clip_fisher(struct futhark_context *ctx, struct futhark_f32_1d **out0, const struct futhark_f32_1d *in0, const float in1);
int futhark_entry_dot(struct futhark_context *ctx, float *out0, const struct futhark_f32_1d *in0, const struct futhark_f32_1d *in1);
int futhark_entry_rank_segments(struct futhark_context *ctx, struct futhark_f32_1d **out0, const uint64_t in0, const struct futhark_u64_1d *in1, const struct futhark_f32_1d *in2);
int futhark_entry_reduce_gradients(struct futhark_context *ctx, struct futhark_f32_1d **out0, const struct futhark_f32_2d *in0);
int futhark_entry_rsf_backward(struct futhark_context *ctx, struct futhark_f32_1d **out0, struct futhark_f32_2d **out1, struct futhark_f32_2d **out2, const struct futhark_f32_1d *in0, const struct futhark_f32_1d *in1, const struct futhark_f32_2d *in2, const struct futhark_f32_2d *in3, const struct futhark_i64_1d *in4, const float in5, const float in6);